--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "devDependencies": {
     "webpack": "*",
-    "vue":"*",
-    "vue-loader": "*",
+    "vue":"2.4.1",
+    "vue-router": "2.7.0",
+    "vue-loader": "13.0.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -22,9 +23,9 @@
     "css-loader": "^0.25.0",
     "vue-html-loader": "^1.2.3",
     "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "*",
-    "axios": "*",
-    "moment": "*"
+    "vue-template-compiler": "2.4.2",
+    "axios": "0.16.2",
+    "moment": "2.18.1"
   },
   "keywords": [],
   "author": "",
