--- a/package.json
+++ b/package.json
@@ -5,28 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack app/main.js wwwroot/js/build.js --watch"
+    "build": "webpack app/main.js wwwroot/js/build.js -p --watch",
+    "build1": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/W1nst/PayFor.git"
   },
+  "dependencies": {
+    "vue": "2.4.2"
+  },
   "devDependencies": {
     "webpack": "*",
-    "vue": "2.4.2",
     "vue-router": "2.7.0",
     "vue-loader": "13.0.2",
     "vee-validate": "^2.0.0-rc.8",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "css-loader": "^0.25.0",
-    "vue-html-loader": "^1.2.3",
-    "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "2.4.2",
     "axios": "0.16.2",
-    "moment": "2.18.1"
+    "moment": "2.18.1",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-env": "^1.5.1",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "vue-template-compiler": "^2.4.2"
   },
   "keywords": [],
   "author": "",
@@ -34,8 +36,5 @@
   "bugs": {
     "url": "https://github.com/W1nst/PayFor/issues"
   },
-  "homepage": "https://github.com/W1nst/PayFor#readme",
-  "dependencies": {
-    
-  }
+  "homepage": "https://github.com/W1nst/PayFor#readme"
 }
