--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
-    "vue-template-compiler": "^2.4.2"
+    "vue-template-compiler": "^2.4.2",
+    "bootstrap-datepicker": "1.7.1"
   },
   "keywords": [],
   "author": "",
