Migrate to dotnet core 2, immplement JWT

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "PayForConnection": "Data Source=.;Integrated Security=True;DataBase=PayForDb;"
+  },
+  "Tokens": {
+    "Key": "53464575465ABCDEF",
+    "Issuer": "http://localhost:5000/"
   }
 }
