--- a/PayFor.csproj
+++ b/PayFor.csproj
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Tools" Version="1.1.0-preview4-final"/>
-    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.0.0-msbuild3-final"/>
-    <!-- <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.1.0-preview4-final"/> -->
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.ViewCompilation" Version="2.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0"/> 
     <PackageReference Include="AutoMapper" Version="6.1.1"/>
   </ItemGroup>
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0-msbuild3-final" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 </Project>
